trunk/Archive/0f9e07638592f0686203ae0370150e0c-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:7:32: error: ‘constexpr’ needed for in-class initialization of static data member ‘void (* const operation<I, O>::ptr)()’ of non-integral type [-fpermissive]
         static const fct ptr = O;
                                ^
